--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,10 @@
     <string name="menu_tools">Tools</string>
     <string name="menu_share">Share</string>
     <string name="menu_send">Send</string>
+
+    <string name="facebook_application_id">456213631748509</string>
+    <string name="fb_login_protocol_scheme">fb456213631748509</string>
+
+
+
 </resources>
