--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,5 @@
     <string name="menu_send">Send</string>
     <string name="facebook_application_id">435448930457946</string>
     <string name="fb_login_protocol_scheme">fb435448930457946</string>
+    <string name="Stringm1">TranslateX</string>
 </resources>
